# esp32-gnssmqtt

./: .gitignore  Cargo.toml  README.md  build.rs  espflash.toml  partitions.csv  sdkconfig.defaults  testing.md
.cargo/: config.toml
.claude/: gsd-file-manifest.json
.claude/hooks/: gsd-statusline.js
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-connectivity/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-status-led/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-uart-pipeline/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-nmea-relay/: 05-01-PLAN.md  05-02-PLAN.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-remote-config/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-rtcm-relay/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-VALIDATION.md
.planning/phases/08-ota/: 08-01-SUMMARY.md  08-02-PLAN.md  08-03-SUMMARY.md
.planning/phases/10-memory-diagnostics/: 10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-thread-watchdog/: 11-02-SUMMARY.md  11-RESEARCH.md  11-VALIDATION.md
.planning/phases/12-resilience/: 12-01-SUMMARY.md  12-02-PLAN.md  12-VALIDATION.md
.planning/phases/13-health-telemetry/: 13-01-PLAN.md  13-01-SUMMARY.md  13-RESEARCH.md  13-VALIDATION.md
.planning/phases/14-quick-additions/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-RESEARCH.md  14-VALIDATION.md  14-VERIFICATION.md
.planning/phases/15-provisioning/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-RESEARCH.md  15-VALIDATION.md  15-VERIFICATION.md
.planning/phases/16-remote-logging/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-RESEARCH.md  16-VALIDATION.md  16-VERIFICATION.md
.planning/phases/17-ntrip-client/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md  17-03-SUMMARY.md  17-04-PLAN.md  17-04-SUMMARY.md  17-RESEARCH.md  17-VALIDATION.md  17-VERIFICATION.md
.planning/phases/18-telemetry-and-ota-validation/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-02-SUMMARY.md  18-03-PLAN.md  18-03-SUMMARY.md  18-RESEARCH.md  18-VALIDATION.md  18-VERIFICATION.md
.planning/phases/19-pre-2-0-bugfix/: 19-01-PLAN.md  19-01-SUMMARY.md  19-02-PLAN.md  19-02-SUMMARY.md  19-03-PLAN.md  19-03-SUMMARY.md  19-CONTEXT.md  19-RESEARCH.md  19-VALIDATION.md  19-VERIFICATION.md
.planning/phases/20-field-testing-fixes/: 20-01-PLAN.md  20-01-SUMMARY.md  20-02-PLAN.md  20-02-SUMMARY.md  20-03-PLAN.md  20-03-SUMMARY.md  20-04-PLAN.md  20-04-SUMMARY.md  20-CONTEXT.md  20-RESEARCH.md  20-VALIDATION.md  20-VERIFICATION.md
.planning/phases/21-mqtt-performance/: 21-01-PLAN.md  21-01-SUMMARY.md  21-02-PLAN.md  21-02-SUMMARY.md  21-03-PLAN.md  21-03-SUMMARY.md  21-CONTEXT.md  21-RESEARCH.md  21-VALIDATION.md  21-VERIFICATION.md
.planning/phases/22-workspace-nostd-audit/: 22-01-PLAN.md  22-01-SUMMARY.md  22-02-PLAN.md  22-VERIFICATION.md
.planning/phases/23-mqtt-rtcm3-gnss-nvs-crate/: 23-01-PLAN.md  23-01-SUMMARY.md  23-02-PLAN.md  23-02-SUMMARY.md  23-03-SUMMARY.md  23-CONTEXT.md  23-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/gnss-dns/: BLOCKER.md  Cargo.toml
crates/gnss-dns/src/: lib.rs
crates/gnss-log/: BLOCKER.md  Cargo.toml
crates/gnss-log/src/: lib.rs
crates/gnss-nvs/: Cargo.toml
crates/gnss-nvs/src/: esp_idf.rs  lib.rs  sequential.rs
crates/gnss-ota/: BLOCKER.md  Cargo.toml
crates/gnss-ota/src/: lib.rs
crates/gnss-softap/: BLOCKER.md  Cargo.toml
crates/gnss-softap/src/: lib.rs
docs/: nostd-audit.md
firmware/: Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: device_id.rs  gnss.rs  log_relay.rs  main.rs  mqtt.rs  mqtt_publish.rs  ntrip_client.rs  provisioning.rs  rtcm_relay.rs  uart_bridge.rs  watchdog.rs
gnss-server/: Cargo.toml
gnss-server/src/: config.rs  epoch.rs  main.rs  mqtt.rs  nmea_parse.rs  observation.rs  rinex_writer.rs  rtcm_decode.rs  web_server.rs
gnss-server/static/: index.html
src/: config.example.rs  config.rs  config_relay.rs  device_id.rs  gnss.rs  gnss_state.rs  led.rs  log_relay.rs  log_shim.c  main.rs  mqtt.rs  mqtt_publish.rs  nmea_relay.rs  ntrip_client.rs  ota.rs  provisioning.rs  resil.rs  rtcm_relay.rs  uart_bridge.rs  watchdog.rs  wifi.rs
(+67 files in other folders)
