[package]
name = "esp32-gnssmqtt"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "=0.51.0", features = [] }
esp-idf-hal = "=0.45.2"
esp-idf-sys = "=0.36.1"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
