cargo-features = ["panic-immediate-abort"]

[workspace]
resolver = "2"
members = [
    "firmware",
    "gnss-server",
    "crates/*",
]

[workspace.dependencies]
log = "0.4"
bytes = "1"

[profile.release]
opt-level = "s"
panic = "immediate-abort"

[profile.dev]
debug = true
opt-level = "z"
panic = "immediate-abort"
